[package]
name = "factory-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "wayland"] }
bevy_flycam = "*"
noise = "0.8.2"
