[package]
name = "yet-another-block-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_rapier3d = "0.23"
noise = "0.8.2"
rand = "0.8.5"
